[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/character/tabs/StatsTab.gd" id="1_0"]
[ext_resource type="Theme" path="res://themes/bg3_theme.tres" id="2_0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.0784314, 0.0941176, 0.113725, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.843137, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="StatsTab" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_0")
script = ExtResource("1_0")

[node name="MarginContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="CharacterHeader" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="PortraitTexture" type="TextureRect" parent="MarginContainer/VBoxContainer/CharacterHeader"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(128, 128)
expand_mode = 1
stretch_mode = 5

[node name="InfoVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CharacterHeader"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/CharacterHeader/InfoVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Character Name"
horizontal_alignment = 1

[node name="DetailsLabel" type="Label" parent="MarginContainer/VBoxContainer/CharacterHeader/InfoVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Race / Class / Level"
horizontal_alignment = 1

[node name="HSeparator1" type="HSeparator" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AbilityGrid" type="GridContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 3
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 8

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="DetailsHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="SavingThrowsVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/DetailsHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="SavingTitle" type="Label" parent="MarginContainer/VBoxContainer/DetailsHBox/SavingThrowsVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Saving Throws"
horizontal_alignment = 1

[node name="SkillsVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/DetailsHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="SkillsTitle" type="Label" parent="MarginContainer/VBoxContainer/DetailsHBox/SkillsVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Skills"
horizontal_alignment = 1

[node name="ProficienciesVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/DetailsHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="ProfTitle" type="Label" parent="MarginContainer/VBoxContainer/DetailsHBox/ProficienciesVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Other Proficiencies"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CoreStatsGrid" type="GridContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 8

[node name="HPLabel" type="Label" parent="MarginContainer/VBoxContainer/CoreStatsGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Hit Points: 78 / 78"

[node name="ACLabel" type="Label" parent="MarginContainer/VBoxContainer/CoreStatsGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Armor Class: 17"

[node name="SpeedLabel" type="Label" parent="MarginContainer/VBoxContainer/CoreStatsGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Speed: 30 ft"

[node name="InitiativeLabel" type="Label" parent="MarginContainer/VBoxContainer/CoreStatsGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Initiative: +2"

[node name="ProfBonusLabel" type="Label" parent="MarginContainer/VBoxContainer/CoreStatsGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Proficiency Bonus: +3"

[node name="PassivePerceptionLabel" type="Label" parent="MarginContainer/VBoxContainer/CoreStatsGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Passive Wisdom (Perception): 15"

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SpecialPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="SpecialVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/SpecialPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/SpecialPanel/SpecialVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ResistancesLabel" type="Label" parent="MarginContainer/VBoxContainer/SpecialPanel/SpecialVBox/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Resistances: Fire 50%"
autowrap_mode = 3

[node name="VulnerabilitiesLabel" type="Label" parent="MarginContainer/VBoxContainer/SpecialPanel/SpecialVBox/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Damage Vulnerabilities: none"
autowrap_mode = 3

[node name="ImmunitiesLabel" type="Label" parent="MarginContainer/VBoxContainer/SpecialPanel/SpecialVBox/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Condition Immunities: "
autowrap_mode = 3

[node name="SensesLabel" type="Label" parent="MarginContainer/VBoxContainer/SpecialPanel/SpecialVBox/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Senses: Darkvision 60 ft"
autowrap_mode = 3

